--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,75 @@
 }
 
 body {
-  background-color: lightgray;
+  padding: 25px 50px;
+  background-color: lightgoldenrodyellow;
 }
 
 .title {
   text-align: center;
   font-size: 2.5rem;
   margin-top: 30px;
+  margin-bottom: 50px;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr;
+  column-gap: 75px;
+  row-gap: 75px;
+  justify-items: center;
+  /* padding: 20px; */
+}
+
+.card {
+  background-color: #f5f5f5;
+  border-radius: 10px;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  width: 90%;
+  text-align: center;
+  padding: 20px;
+}
+
+.card img {
+  max-height: 300px;
+  object-fit: contain;
+}
+
+.card h2 {
+  font-size: 1.5rem;
+  margin: 10px;
+}
+
+.card p {
+  font-size: 1rem;
+  margin: 10px;
+}
+
+.btn {
+  padding: 8px;
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  font-size: 16px;
+}
+
+@media only screen and (min-width: 600px) {
+  .container {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
+/* Laptop styles */
+@media only screen and (min-width: 900px) {
+  .container {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
+
+/* Desktop styles */
+@media only screen and (min-width: 1200px) {
+  .container {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
 }
